# LMS_SPA

./: .env.sample  .flake8  README.md  coverage.txt  groups.json  payments_fixture.json  pyproject.toml
config/: settings.py  urls.py
materials/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py
users/: admin.py  models.py  permissions.py  serializers.py  services.py  tasks.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_payments.py  0003_subscription.py  0004_alter_user_managers_payments_link_and_more.py
