[project]
name = "lms-spa"
version = "0.1.0"
description = ""
authors = [
    {name = "Максим Малеев",email = "mmaleev1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "django-filter (>=25.1,<26.0)",
    "djangorestframework-simplejwt (>=5.5.0,<6.0.0)",
    "timedelta (>=2020.12.3,<2021.0.0)",
    "datetime (>=5.5,<6.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-cov (>=6.1.1,<7.0.0)",
    "drf-yasg (>=1.21.10,<2.0.0)",
    "stripe (>=12.1.0,<13.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "eventlet (>=0.40.0,<0.41.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
